manifests/tikceto/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-tikceto-prefix
  namespace: tikceto
spec:
  stripPrefix:
    prefixes:
      - /tikceto
