manifests/tikceto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketo-ingress
  namespace: tikceto
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: tikceto-strip-tikceto-prefix@kubernetescrd
spec:
  ingressClassName: traefik 
  tls:
  - hosts:
    - api.k5sha.com
    - tikceto.k5sha.com
  rules:
  - host: api.k5sha.com
    http:
      paths:
      - path: /tikceto
        pathType: Prefix
        backend:
          service:
            name: ticketo-api
            port:
              number: 8080
  - host: tikceto.k5sha.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ticketo-frontend
            port:
              number: 80
